--- a/src/components/heroComponent/HeroComponent.module.css
+++ b/src/components/heroComponent/HeroComponent.module.css
@@ -4,13 +4,13 @@
   justify-content: space-between;
   height: 524px;
   content-visibility: auto;
-  /* background-image: linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.98) 5%,
       rgba(255, 255, 255, 0.85) 10%,
       rgba(255, 255, 255, 0) 40%
     ),
-    url('../../images/hero-image.webp'); */
+    url("../../../public/images/hero-image.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -83,4 +83,17 @@
 .tentRepairDesktop {
   text-transform: uppercase;
   color: rgba(241, 117, 86, 1);
+}
+
+.imagesWrapper {
+  display: flex;
+  gap: 10px;
+  width: 90%;
+  margin: 0 auto;
+}
+.smallImagesWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 0 auto;
 }
