--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,8 @@ h6 {
 html,
 body {
   /* height: 100%; */
+  max-width: 1200px;
+  margin: 0 auto;
   line-height: 1;
   font-size: 12px;
   font-weight: 400;
@@ -56,8 +58,66 @@ button {
   outline: none;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Стилі для контенту модального вікна */
+.modal-content {
+  position: relative;
+  margin: 10% auto;
+  padding: 20px;
+  background-color: #fefefe;
+  border-radius: 8px;
+  max-width: 610px;
+}
+
+/* Стилі для кнопки закриття */
+.close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 28px;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
-  #root {
+  .modal {
+    display: none;
+    position: fixed;
+    /* margin: 0; */
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 70%;
+    overflow: auto;
+    background-color: transparent;
+    padding: 40px;
+    overflow: hidden;
+  }
+
+  .modal-content {
+    position: relative;
+    /* margin: 10% auto; */
+    /* padding: 20px; */
+    background-color: #fefefe;
+    border-radius: 8px;
+    /* max-width: 800px; */
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #__next {
     padding-top: 0px;
   }
 }
