--- a/src/components/heroComponent/HeroComponent.module.css
+++ b/src/components/heroComponent/HeroComponent.module.css
@@ -4,13 +4,13 @@
   justify-content: space-between;
   height: 524px;
   content-visibility: auto;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.98) 5%,
       rgba(255, 255, 255, 0.85) 10%,
       rgba(255, 255, 255, 0) 40%
     ),
-    url("../../../public/images/hero-image.webp");
+    url("../../../public/images/hero-image.webp"); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
