--- a/src/components/heroComponent/HeroComponent.module.css
+++ b/src/components/heroComponent/HeroComponent.module.css
@@ -1,10 +1,13 @@
 .imageWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100vw;
   height: 524px;
-  content-visibility: auto;
-  background-image: linear-gradient(
+  overflow: hidden;
+  /* content-visibility: auto; */
+  /* background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.98) 5%,
       rgba(255, 255, 255, 0.85) 10%,
@@ -14,9 +17,21 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 74px 32px;
+  padding: 74px 32px; */
   /* margin-top: 24px; */
 }
+
+.heroImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.heroTextWrapper {
+  position: absolute;
+  top: 100px;
+}
+
 .heroTitle {
   text-align: center;
   font-size: 44px;
@@ -96,4 +111,16 @@
   flex-direction: column;
   gap: 10px;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 930px) {
+  .smallImagesWrapper {
+    display: none;
+  }
+  .heroTextWrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
