--- a/src/components/heroComponent/HeroComponent.module.css
+++ b/src/components/heroComponent/HeroComponent.module.css
@@ -102,6 +102,8 @@
 
 .imagesWrapper {
   display: flex;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   gap: 10px;
   width: 90%;
   margin: 0 auto;
