--- a/src/layout/header/Header.module.css
+++ b/src/layout/header/Header.module.css
@@ -61,7 +61,7 @@
 }
 .navigate a.active {
   font-weight: 800;
-  color: rgba(241, 117, 86, 1);
+  color: rgb(248, 109, 74);
 }
 
 @media screen and (min-width: 768px) {
