fixed bugs with desine of single item of promotions and used tents

--- a/src/components/usedTents/UsedTents.module.css
+++ b/src/components/usedTents/UsedTents.module.css
@@ -38,7 +38,8 @@
 
 .usedTentImage {
   width: 100%;
-  height: 210px;
+  height: auto;
+  /* height: 210px; */
   object-fit: cover;
   margin-bottom: 16px;
 }
@@ -118,7 +119,8 @@
 
   .usedTentImage {
     width: 100%;
-    height: 210px;
+    height: auto;
+    /* height: 210px; */
     object-fit: cover;
   }
 }
