--- a/src/components/relatedItems/RelatedItems.module.css
+++ b/src/components/relatedItems/RelatedItems.module.css
@@ -42,6 +42,7 @@
 
 .promImage {
   width: 100%;
+  height: auto;
 }
 
 .promTitle {
@@ -144,7 +145,7 @@
   .promImage {
     border-radius: 5px;
     overflow: hidden;
-    width: 100%;
+    width: auto;
     height: 100%;
   }
 
