--- a/src/tab/singleUsedTentTab/Announcement.module.css
+++ b/src/tab/singleUsedTentTab/Announcement.module.css
@@ -27,9 +27,10 @@
   margin-top: auto;
 }
 
-/* .image {
+.image {
   width: 100%;
-} */
+  height: auto;
+}
 
 .imageBox {
   width: 305px;
@@ -78,7 +79,7 @@
 }
 
 .tell {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: bold;
   text-align: center;
   color: rgba(2, 129, 94, 1);
@@ -166,9 +167,10 @@
   text-transform: uppercase;
 }
 
-/* .relatedImage {
+.relatedImage {
   width: 100%;
-} */
+  height: 100%;
+}
 
 .relatedAdsBox {
   display: flex;
@@ -254,15 +256,21 @@
     word-break: break-word;
   }
 
+  .title {
+    font-size: 48px;
+    text-transform: uppercase;
+  }
+
   .relatedAdsTitle {
     margin-bottom: 0px;
     text-align: center;
     color: rgba(2, 129, 94, 1);
   }
 
-  /* .image {
+  .image {
     width: 100%;
-  } */
+    height: auto;
+  }
 
   .imageBox {
     width: 305px;
@@ -339,7 +347,7 @@
     width: 100%;
     height: 54px;
     margin: 0;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     line-height: 21.94px;
     text-align: center;
