added to promotions component fron PhoneInput library

--- a/src/components/promotions/Promotions.module.css
+++ b/src/components/promotions/Promotions.module.css
@@ -169,6 +169,13 @@
   width: 100%;
   height: auto;
 }
+.phoneContainer input {
+  min-width: 100%;
+}
+
+.searchClassPhone {
+  max-height: 20px;
+}
 @media screen and (min-width: 768px) {
   .link {
     font-size: 20px;
