--- a/src/components/uniqueOffers/UniqueOffers.module.css
+++ b/src/components/uniqueOffers/UniqueOffers.module.css
@@ -45,7 +45,7 @@
 .offerImage {
   /* margin-bottom: 16px; */
   width: 100%;
-  height: auto;
+  height: 150px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -182,6 +182,12 @@
     /* margin-top: auto; */
     margin-bottom: 10px;
     overflow: hidden;
+  }
+
+  .offerImage {
+    /* margin-bottom: 16px; */
+    width: 100%;
+    height: min-content;
   }
 
   .offersList {
