--- a/src/components/usedTents/UsedTents.module.css
+++ b/src/components/usedTents/UsedTents.module.css
@@ -38,7 +38,7 @@
 
 .usedTentImage {
   width: 100%;
-  height: auto;
+  height: 200px;
   /* height: 210px; */
   object-fit: cover;
   margin-bottom: 16px;
@@ -119,7 +119,7 @@
 
   .usedTentImage {
     width: 100%;
-    height: auto;
+    /* height: 200px; */
     /* height: 210px; */
     object-fit: cover;
   }
