fixed fonts at hero page

--- a/src/components/heroComponent/HeroComponent.module.css
+++ b/src/components/heroComponent/HeroComponent.module.css
@@ -94,7 +94,7 @@
 
 .heroTitleDesktop {
   text-align: center;
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
   font-size: 88px;
   font-weight: 800;
   line-height: 94px;
