--- a/src/tab/singleUsedTentTab/Announcement.module.css
+++ b/src/tab/singleUsedTentTab/Announcement.module.css
@@ -247,7 +247,7 @@
 
   .title,
   .relatedAdsTitle {
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 20px;
