--- a/src/components/findUs/FindUs.module.css
+++ b/src/components/findUs/FindUs.module.css
@@ -17,6 +17,11 @@
   text-transform: lowercase;
 }
 .googlemap {
+  width: 100%;
+  height: 450px;
+  min-height: 300px;
+  background-color: #f1f1f1;
+  border: none;
   margin-bottom: 24px;
   border-radius: 15px;
 }
